# nova-pollinate

./: .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  AUTHORS  ChangeLog  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vendordata.conf
docker/: Dockerfile  docker-run.sh
docs/: CROWDSTRIKE.md
etc/: api-paste.ini  vendordata.conf.sample
etc/nova-pollinate/: config-generator.conf  nova-pollinate.conf.sample
files/: api-paste.ini
pollinate/: app.py  clients.py  cmd.py  config.py  keystone.py  secrets.py  service.py  utils.py  wsgi.py
pollinate/providers/: __init__.py
pollinate/providers/cloudstor/: __init__.py
pollinate/providers/crowdstrike/: __init__.py
pollinate/providers/keystone/: __init__.py
pollinate/providers/nvidia_vgpu/: __init__.py
pollinate/providers/windows/: __init__.py
pollinate/tests/etc/: nova-pollinate.conf
pollinate/tests/unit/: base.py  fakes.py  test_api.py  test_manager.py  test_quota.py  test_secrets.py  test_service.py
pollinate/tests/unit/api/v1/: test_flavor.py  test_flavorfreeslot.py  test_flavorproject.py  test_reservation.py
pollinate/tests/unit/common/: test_blazar.py
pollinate/tests/unit/notification/: test_endpoints.py
pollinate/tests/unit/providers/: test_crowdstrike.py  test_nvidia_gpu.py  test_windows.py
pollinate/tests/unit/worker/: test_manager.py
vendordata/: config.py  keystone.py  keystone_client.py  nova.py  server.py  test.py  utils.py  wsgi.py
vendordata/providers/: __init__.py
vendordata/providers/cloudstor/: __init__.py
vendordata/providers/keystone/: __init__.py
vendordata/tests/: fakes.py  test.ini  test_server.py  vendordata.conf
vendordata/tests/providers/: test_cloudstor.py  test_keystone.py
