[metadata]
name = vendordata
description-file = README.rst
license = Apache License, Version 2.0
summary = Dynamic Vendordata for the Nectar Research Cloud
author = Andy Botting
author_email = andy@andybotting.com
home-page = https://github.com/NeCTAR-RC/vendordata
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 3 - Alpha

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = vendordata

data_files =
    usr/share/vendordata =
        files/vendordata-server.service
    etc/vendordata =
        files/api-paste.ini

[pbr]
skip_authors = True
skip_changelog = True

[entry_points]
oslo.config.opts =
    vendordata = vendordata.config:list_opts

console_scripts =
    vendordata-server = vendordata.wsgi:main
