[metadata]
name = pollinate
summary = Nectar Nova dynamic vendordata injector
author = Andy Botting
author_email = andy@andybotting.com
home_page = https://github.com/NeCTAR-RC/nova-pollinate
python_requires = >=3.8
classifier =
    Environment :: ARDC Nectar
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    pollinate


[entry_points]
console_scripts =
    pollinate = pollinate.cmd:main

oslo.config.opts =
    pollinate = pollinate.config:list_opts

pollinate.providers =
    nvidia_vgpu = pollinate.providers.nvidia_vgpu:NvidiaVGPUProvider
    windows_product_key = pollinate.providers.windows:WindowsProductKeyProvider
